# kafka_demo_app

./: .gitignore  docker-compose.yaml  pyproject.toml
fe/: dashboard.html  index.html
kafka_demo_app/: __init__.py  consumer.py  getting_started.ini  models.py  producer.py  server.py
