[tool.poetry]
name = "kafka-demo-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "kafka_demo_app"}]
# virtualenvs.prefer-active-python = True

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
confluent-kafka = "^2.0.2"
configparser = "^5.3.0"
bson = "^0.5.10"
websockets = "^11.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
